{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 15,
  "lineage": "25b242ea-3d75-915b-f299-ddb87419328a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07dc0b5cad2999c28",
            "arn": "arn:aws:ec2:eu-west-2:589720682808:instance/i-0f214c844c10adcb9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f214c844c10adcb9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e913d4b3b2c81b4b",
            "private_dns": "ip-10-10-1-253.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-089bf17eb3fff2b81",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a70b6d85bbe9435e",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07c8b18a5794e26ab"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-demo-vpc-sg",
            "aws_subnet.terraform-demo-subnet",
            "aws_vpc.terraform-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-demo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:589720682808:internet-gateway/igw-0aeb91defa6fe85c2",
            "id": "igw-0aeb91defa6fe85c2",
            "owner_id": "589720682808",
            "tags": {
              "Name": "terraform-demo-igw"
            },
            "tags_all": {
              "Name": "terraform-demo-igw"
            },
            "vpc_id": "vpc-0e9ea7ed1d72a1a8c"
          },
          "dependencies": [
            "aws_vpc.terraform-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-demo-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:589720682808:route-table/rtb-0eec578da44653bb7",
            "id": "rtb-0eec578da44653bb7",
            "owner_id": "589720682808",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aeb91defa6fe85c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-demo-rt"
            },
            "tags_all": {
              "Name": "terraform-demo-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9ea7ed1d72a1a8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-demo-igw",
            "aws_vpc.terraform-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-demo-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0375e328565b800e8",
            "route_table_id": "rtb-0eec578da44653bb7",
            "subnet_id": "subnet-0a70b6d85bbe9435e"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-demo-igw",
            "aws_route_table.terraform-demo-rt",
            "aws_subnet.terraform-demo-subnet",
            "aws_vpc.terraform-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-demo-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:589720682808:security-group/sg-07c8b18a5794e26ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c8b18a5794e26ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-vpc-sg",
            "name_prefix": "",
            "owner_id": "589720682808",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9ea7ed1d72a1a8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-demo-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:589720682808:subnet/subnet-0a70b6d85bbe9435e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a70b6d85bbe9435e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "589720682808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-demo-subnet"
            },
            "tags_all": {
              "Name": "terraform-demo-subnet"
            },
            "vpc_id": "vpc-0e9ea7ed1d72a1a8c"
          },
          "dependencies": [
            "aws_vpc.terraform-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:589720682808:vpc/vpc-0e9ea7ed1d72a1a8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-042420b6cddd05470",
            "default_route_table_id": "rtb-01ecaa8b80c7e559e",
            "default_security_group_id": "sg-0e346250839160192",
            "dhcp_options_id": "dopt-58fcd830",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9ea7ed1d72a1a8c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ecaa8b80c7e559e",
            "owner_id": "589720682808",
            "tags": {
              "Name": "terraform-demo-vpc"
            },
            "tags_all": {
              "Name": "terraform-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}